# astra_multicamera

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: 1_cam_record.launch  2.launch  2_cam.launch  2_cam.launch.bak  2_cam_new_may.launch  2_cam_new_may_delay.launch  2_siar.launch  3_cam.launch  3_cam_provisional.launch  3_raposa_delay.launch  3_siar.launch  3_siar_.launch  4_cam_provisional.launch  4_cam_siar.launch  4_cam_skip.launch  4_siar.launch  4_siar_delay.launch  5_cam_final.launch  5_raposa_delay.launch  bag_1_camera.launch  bag_depth.launch  example.launch  frames.launch  frames_4_cam_double.launch  frames_4_cam_double_low.launch  frames_5_cam.launch  frames_5_cam_double_low.launch  frames_5_cam_double_low_test.launch  frames_5_cam_may.launch  frames_7_cam.launch  frames_7_cam_new_platform.launch  frames_provisional.launch  frames_siar.launch  new_cam_back.launch  new_cam_front.launch  new_cam_left.launch  new_cam_right.launch  new_cam_up.launch  right_provisional.launch  sandwich.launch  (+4 more)
launch/4_cam_double/: 4_cam_double.launch  5_cam_double.launch  back_.launch  back_down.launch  front_.launch  front_down.launch  front_down_2.launch
launch/5_cam/: 5_cam_siar.launch  frames_5_cam_siar.launch  frames_5_cam_siar_nice.launch  front.launch  left.launch  right.launch  up.launch
launch/5_cam_double_front_down/: 5_cam_double_front_down.launch  back_2.launch  front_2.launch  front_down_left.launch  front_down_right.launch  front_left.launch  front_right.launch  up_2.launch
launch/7_cam/: 4_cam_down.launch  7_cam.launch  back_7.launch  back_left_7.launch  back_right_7.launch  front_7.launch  front_left_7.launch  front_right_7.launch  up_7.launch
launch/7_cam_2/: 7_cam.launch  back.launch  front.launch  front_right.launch  up.launch
rviz/: all_cameras.rviz
src/: camera_info.hpp  generate_config_file.cpp  generate_launch_file.cpp  show_info.cpp
