<?xml version="1.0"?>
<package>
  <name>astra_multicamera</name>
  <version>0.1.0</version>
  <description>

     This package uses the openni2_camera services in order to implement a multi-camera driver that could emit an
     integrated PointCloud of the environment using the data from n sensors.
     
     Additionally, it should identify the location of each camera (provide a easy-to-understand name of the 
     namespace of the camera).

  </description>
  <author>David Alejo</author>
  <maintainer email="dalejo@us.es">David Alejo</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/openni2_multicamera</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>astra_camera</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  
  <run_depend>astra_camera</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>